test/fail/fail05.lsp
(r 'A 'B '(<))
(r 'B 'C '(<))
(r 'C 'A '(<))
(r_exist 'A 'B '(>))
